--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,7 @@
 :root {
   --primary: #714a38;
   --secondary: #f0e1d3;
+  --special: #c9b1a0;
   --dark: #333;
   --light: #f3e9e0;
   --radius: 8px;
