--- a/css/pages.css
+++ b/css/pages.css
@@ -1,3 +1,16 @@
 .section-about {
   background: var(--secondary);
 }
+
+.text-special {
+  color: var(--primary);
+  font-weight: bold;
+  text-align: right;
+  margin-top: 12px;
+}
+
+.section-title{
+  color: var(--primary);
+  font-weight: bold;
+  margin-bottom: 16px;
+}
